# RS-SLM-Agent

./: Agent-Building.ipynb  Agent_flow.ipynb  Final_agent.ipynb  README.md  main.py  pyproject.toml
Archieves/: Agent_flow.ipynb
studio/: agent.py  langgraph.json
studio/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
